--- a/kunwariwebpage/templates/kunwariwebpage/base.html
+++ b/kunwariwebpage/templates/kunwariwebpage/base.html
@@ -2,24 +2,11 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>My amazing blog</title>
+    <title>Kunwari Activator</title>
+    {% load static%}
 </head>
 
 <body>
-    <div id="sidebar">
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/blog/">Blog</a></li>
-        </ul>
-    </div>
-
-    <div id="content">
-        <h2>Entry one</h2>
-        <p>This is my first entry.</p>
-
-        <h2>Entry two</h2>
-        <p>This is my second entry.</p>
-    </div>
     {% block maincontent%}
     {% endblock %}
 </body>
