update: added html elements

--- a/kunwariwebpage/templates/kunwariwebpage/login.html
+++ b/kunwariwebpage/templates/kunwariwebpage/login.html
@@ -1,6 +1,28 @@
 {% extends 'kunwariwebpage/base.html'%}
 {% block maincontent %}
 
+<div class="wrapper">
+  <div class="form-wrapper sign-in">
+      <form action="" method="POST">
+          <h2>Login</h2>
+          <div class="input-group">
+              <input type="text" name="username" required>
+              <label for="">Username</label>
+          </div>
+          <div class="input-group">
+              <input type="password" name="password" required>
+              <label for="">Password</label>
+          </div>
 
+          <button type="submit">Login</button>
+          <div class="admin_login">
+              <p>Login as <a href="admin_login.php">Admin</a></p>
+          </div>
+          <div class="signUp-link">
+              <p>Don't have an account? <a href="register.php">Sign Up</a></p>
+          </div>
+      </form>
+  </div>
+</div>
 
 {% endblock %}
