Update: Fix css

--- a/kunwariwebpage/templates/kunwariwebpage/base.html
+++ b/kunwariwebpage/templates/kunwariwebpage/base.html
@@ -4,6 +4,8 @@
     
     <title>Kunwari Activator</title>
     {% load static %}
+    <script src="{% static 'kunwariwebpage/index.js' %}"></script>
+    <link rel = "stylesheet" href = "{% static 'kunwariwebpage/style.css' %}">
 </head>
 
 <body>
