--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -1,6 +1,11 @@
 {% extends 'kunwariwebpage/base.html'%}
 {% block maincontent %}
 
-<h1>Haller</h1>
+<form action="{% url 'kunwariwebpage:chatbot'%}" method="post" enctype="multipart/form-data">
+    <h1>Chat with GPT-4o Mini</h1>
+    <input type="text" id="prompt" placeholder="Type a message..." name="prompt">
+    <button type="submit">Send</button>
+</form>
 
+    <div id="chat_response">{{response}}</div>
 {% endblock %}
