update: login v2, style v2, base adds

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -7,5 +7,5 @@
     <button type="submit">Send</button>
 </form>
 
-    <div id="chat_response">{{response}}</div>
+    <div id="chat_response">{{response}}{% lorem 1 b random %}</div>
 {% endblock %}
