--- a/kunwariwebpage/templates/kunwariwebpage/base.html
+++ b/kunwariwebpage/templates/kunwariwebpage/base.html
@@ -6,6 +6,7 @@
     {% load static %}
     <script src="{% static 'kunwariwebpage/index.js' %}"></script>
     <link rel = "stylesheet" href = "{% static 'kunwariwebpage/style.css' %}">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
