--- a/kunwariwebpage/templates/kunwariwebpage/login.html
+++ b/kunwariwebpage/templates/kunwariwebpage/login.html
@@ -1,6 +1,33 @@
 {% extends 'kunwariwebpage/base.html'%}
 {% block maincontent %}
 
-
+<body class="body-login">
+<div class="container">
+  <div class="form-box login">
+    <form action="">
+      <h1>Login</h1>
+      <div class="input-box">
+        <input type="text" placeholder="Username" required>
+        <i class='bx bxs-user'></i>
+      </div>
+      <div class="input-box">
+        <input type="password" placeholder="Password" required>
+        <i class='bx bxs-lock-alt' ></i>
+      </div>
+      <div class="forgot-link">
+        <a href="#">Forgot password?</a>
+      </div>
+      <button type="submit" class="btn">Login</button>
+      <p>or login with social platforms</p>
+      <div class="social-icons">
+        <a href="#"><i class='bx bxl-google' ></i></a>
+        <a href="#"><i class='bx bxl-facebook' ></i></a>
+        <a href="#"><i class='bx bxl-github' ></i></a>
+        <a href="#"><i class='bx bxl-linkedin' ></i></a>
+      </div>
+    </form>
+  </div>
+</div>
+</body>
 
 {% endblock %}
