--- a/kunwariwebpage/static/kunwariwebpage/style.css
+++ b/kunwariwebpage/static/kunwariwebpage/style.css
@@ -7,7 +7,8 @@
   font-family: 'Poppins', sans-serif;
 }
 
-/* Login Form */
+/* Login Form,
+   Registration Form */
 .body-login {
   display: flex;
   justify-content: center;
@@ -19,9 +20,11 @@
   position: relative;
   width: 850px;
   height: 550px;
-  background: #fff;
+  background: #fffae8;
   border-radius: 16px;
   box-shadow: 0 0 30px rgba(0, 0, 0, .2);
+  margin: 20px;
+  overflow: hidden;
 }
 .form-box {
   position: absolute;
@@ -33,6 +36,18 @@
   align-items: center;
   color: #fffae8;
   text-align: center;
+  padding: 40px;
+  z-index: 1;
+  transition: .6s ease-in-out 1.2s, visibility 0s 1s;
+}
+.container.active .form-box {
+  right: 50%;
+}
+.form-box.register {
+  visibility: hidden;
+}
+.container.active .form-box.register {
+  visibility: visible;
 }
 form {
   width: 100%;
@@ -66,7 +81,7 @@ form {
   top: 50%;
   transform: translateY(-50%);
   font-size: 20px;
-  color: #888;
+  color: #2a2a2a;
 }
 .forgot-link {
   margin: -15px 0 15px;
@@ -79,26 +94,141 @@ form {
 .btn {
   width: 100%;
   height: 48px;
-  background: #7494ec;
+  background: #fffae8;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, .1);
   border: none;
   cursor: pointer;
   font-size: 16px;
-  color: #fff;
+  color: #2a2a2a;
   font-weight: 600;
 }
 .container p {
   font-size: 14.5px;
   margin: 15px 0;
 }
+.social-icons {
+  display: flex;
+  justify-content: center;
+}
 .social-icons a {
   display: inline-flex;
   padding: 10px;
-  border: 2px solid #ccc;
+  border: 2px solid #fffae8;
   border-radius: 8px;
   font-size: 24px;
-  color: #333;
+  color: #fffae8;
   text-decoration: none;
   margin: 0 8px;
+}
+.toggle-box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.toggle-box::before {
+  content: '';
+  position: absolute;
+  left: -250%;
+  width: 300%;
+  height: 100%;
+  background: #fffae8;
+  border-radius: 150px;
+  z-index: 2;
+  transition: 1.8s ease-in-out;
+}
+.container.active .toggle-box::before {
+  left: 50%;
+}
+.toggle-panel {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  background: #fffae8;
+  color: #2a2a2a;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  transition: .6s ease-in-out;
+}
+.toggle-panel.toggle-left {
+  left: 0;
+  transition-delay: .6s;
+}
+.container.active .toggle-panel.toggle-left {
+  left: -50%;
+  transition-delay: .6s;
+}
+.toggle-panel.toggle-right {
+  right: -50%;
+  transition-delay: .6s;
+}
+.container.active .toggle-panel.toggle-right {
+  right: 0;
+  transition-delay: 1.2s;
+}
+.toggle-panel p {
+  margin-bottom: 20px;
+}
+.toggle-panel .btn {
+  width: 160px;
+  height: 46px;
+  background: #2a2a2a;
+  color: #fffae8;
+  border: 2px solid #2a2a2a;
+  box-shadow: none;
+}
+@media screen and (max-width: 650px) {
+  .container {
+    height: calc(100vh - 40px);
+  }
+  .form-box {
+    bottom: 0;
+    width: 100%;
+    height: 70%;
+  }
+  .container.active .form-box {
+    right: 0;
+    bottom: 30%;
+  }
+  .toggle-box::before {
+    left: 0;
+    top: -270%;
+    width: 100%;
+    height: 300%;
+    border-radius: 20vw;
+  }
+  .container.active .toggle-box::before {
+    left: 0;;
+    top: 70%;
+  }
+  .toggle-panel {
+    width: 100%;
+    height: 30%;
+  }
+  .toggle-panel.toggle-left {
+    top: 0;
+  }
+  .container.active .toggle-panel.toggle-left {
+    left: 0;
+    top: -30%;
+  }
+  .toggle-panel.toggle-right {
+    right: 0;
+    bottom: -30%;
+  }
+  .container.active .toggle-panel.toggle-right {
+    bottom: 0;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .form-box {
+    padding: 20px;
+  }
+  .toggle-panel h1 {
+    font-size: 30px;
+  }
 }
