--- a/kunwariwebpage/templates/kunwariwebpage/login.html
+++ b/kunwariwebpage/templates/kunwariwebpage/login.html
@@ -7,17 +7,17 @@
     <form action="">
       <h1>Login</h1>
       <div class="input-box">
-        <input type="text" placeholder="Username" required>
+        <input type="text" placeholder="Username" required id="username">
         <i class='bx bxs-user'></i>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Password" required>
+        <input type="password" placeholder="Password" required id="password">
         <i class='bx bxs-lock-alt' ></i>
       </div>
       <div class="forgot-link">
         <a href="#">Forgot password?</a>
       </div>
-      <button type="submit" class="btn">Login</button>
+      <button type="submit" class="btn" id="login-submit">Login</button>
       <p>or login with social platforms</p>
       <div class="social-icons">
         <a href="#"><i class='bx bxl-google' ></i></a>
