--- a/kunwariwebpage/templates/kunwariwebpage/login.html
+++ b/kunwariwebpage/templates/kunwariwebpage/login.html
@@ -1,7 +1,7 @@
 {% extends 'kunwariwebpage/base.html'%}
 {% block maincontent %}
 
-<body class="body-login">
+<div class="body-login">
 <div class="container">
   <div class="form-box login">
     <form action="">
@@ -67,6 +67,5 @@
     </div>
   </div>
 </div>
-</body>
 
 {% endblock %}
