--- a/kunwariwebpage/static/kunwariwebpage/style.css
+++ b/kunwariwebpage/static/kunwariwebpage/style.css
@@ -223,7 +223,6 @@ form {
     bottom: 0;
   }
 }
-
 @media screen and (max-width: 400px) {
   .form-box {
     padding: 20px;
@@ -233,17 +232,17 @@ form {
   }
 }
 
-/* Index */
-body.body-index {
+/* Index Page */
+.body-index {
   font-family: 'Poppins', sans-serif;
-  background-color: #f4f4f4;
+  background-color: #fffae8;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   margin: 0;
+  transition: background-color 0.3s, color 0.3s;
 }
-
 .body-index form {
   background: #fff;
   padding: 20px;
@@ -253,17 +252,15 @@ body.body-index {
   height: 500px;
   text-align: center;
 }
-
 .body-index h1 {
   font-size: 20px;
   margin-bottom: 15px;
-  color: #333;
+  color: #2a2a2a;
 }
-
 .body-index input[type="text"] {
   width: 100%;
   padding: 12px;
-  border: 2px solid #ddd;
+  border: 2px solid #2a2a2a51;
   border-radius: 8px;
   font-size: 16px;
   outline: none;
@@ -273,15 +270,13 @@ body.body-index {
   max-height: 120px;
   overflow-y: auto;
 }
-
 .body-index input[type="text"]:focus {
-  border-color: #007bff;
+  border-color: #2a2a2a;
 }
-
-.body-index button {
-  background: #007bff;
-  color: #fff;
-  border: none;
+.body-index .submit {
+  background: #2a2a2a;
+  color: #fffae8;
+  border: 2px solid #2a2a2a;
   padding: 10px 15px;
   margin-top: 10px;
   border-radius: 8px;
@@ -290,11 +285,11 @@ body.body-index {
   width: 100%;
   transition: background 0.3s;
 }
-
-.body-index button:hover {
-  background: #0056b3;
+.body-index .submit:hover {
+  background: #fffae8;
+  border: 2px solid #2a2a2a;
+  color: #2a2a2a;
 }
-
 .body-index #chat_response {
   margin-left: 8px;
   background: #fff;
@@ -303,8 +298,43 @@ body.body-index {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   font-size: 14px;
   color: #333;
+  width: 350px;
   max-width: 350px;
   height: 500px;
   text-align: left;
   overflow-y: auto;
 }
+.theme-change button.dark-btn,
+.theme-change button.light-btn {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 12px;
+  left: 12px;
+  font-size: 24px;
+  background: #2a2a2a;
+  cursor: pointer;
+  border: 2px solid #2a2a2a;
+  color: #fffae8;
+  transition: 0.3s ease-in-out;
+}
+.theme-change button i {
+  padding: 12px;
+}
+.theme-change button:hover {
+  background: #fffae8;
+  color: #2a2a2a;
+  border: 2px solid #2a2a2a;
+}
+.theme-change .light-btn {
+  display: none;
+}
+.dark-mode {
+  background-color: #2a2a2a;
+  color: #fffae8;
+}
+.light-mode {
+  background-color: #fffae8;
+  color: #2a2a2a;
+}
+
