Update: Revised models, admin. Added Authentication

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,16 @@
 </head>
 
 <body>
+    {% if messages %}
+        {% for message in messages %}
+            {{message}}
+        {% endfor%}
+    {% endif %}
     {% block maincontent%}
     {% endblock %}
 
-    <script src="{% static 'kunwariwebpage/index.js' %}"></script>
-    <link rel = "stylesheet" href = "{% static 'kunwariwebpage/style.css' %}">
+    <script src="{% static 'index.js' %}"></script>
+    <link rel = "stylesheet" href = "{% static 'style.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </body>
 </html>
