--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -13,9 +13,14 @@
     </div>
 
     <div class="user-options">
-        <button class="btn user-btn">
+        <button class="btn user-btn" onclick="toggleDropdown()">
             <i class='bx bxs-user'></i>
         </button>
+        <div id="userDropdown" class="dropdown">
+            <a href="#">Profile</a>
+            <a href="#">Dark Mode</a>
+            <a href="#">Logout</a>
+        </div>
     </div>
 </div>
 
@@ -26,6 +31,21 @@
         this.style.height = 'auto';
         this.style.height = (this.scrollHeight) + 'px';
     });
+</script>
+
+<script> // USER DROPDOWN
+    function toggleDropdown() {
+        document.getElementById("userDropdown").classList.toggle("show");
+      }
+    
+      window.onclick = function(event) {
+        if (!event.target.matches('.user-btn') && !event.target.closest('.user-options')) {
+          var dropdown = document.getElementById("userDropdown");
+          if (dropdown.classList.contains('show')) {
+            dropdown.classList.remove('show');
+          }
+        }
+      }
 </script>
 
 {% endblock %}
