--- a/static/style.css
+++ b/static/style.css
@@ -91,7 +91,7 @@ form {
   color: #fffae8;
   text-decoration: none;
 }
-.body-index.btn {
+.body-login .btn {
   width: 100%;
   height: 48px;
   background: #fffae8;
@@ -312,6 +312,29 @@ form {
   text-align: left;
   overflow-y: auto;
 }
+.dropdown {
+  display: none;
+  position: absolute;
+  top: 72px;
+  right: 12px;
+  background-color: white;
+  min-width: 150px;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+  border-radius: 8px;
+  z-index: 1;
+}
+.dropdown a {
+  color: black;
+  padding: 10px 12px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown a:hover {
+  background-color: #f1f1f1;
+}
+.show {
+  display: block;
+}
 .user-options button.user-btn {
   width: 50px;
   height: 50px;
@@ -330,8 +353,6 @@ form {
   padding: 12px;
 }
 .user-options button:hover {
-  background: #fffae8;
-  color: #2a2a2a;
-  border: 2px solid #2a2a2a;
+  background: #000;
+  border: 2px solid #000;
 }
-
