update: edited dropdown options

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -17,9 +17,9 @@
             <i class='bx bxs-user'></i>
         </button>
         <div id="userDropdown" class="dropdown">
-            <a href="#">Profile</a>
-            <a href="#">Dark Mode</a>
-            <a href="#">Logout</a>
+            <a href="#"><i class='bx bxs-palette'></i>Change Theme</a>
+            <a href="#"><i class='bx bxs-cog'></i>Settings</a>
+            <a href="#"><i class='bx bxs-log-out'></i>Logout</a>
         </div>
     </div>
 </div>
