--- a/static/style.css
+++ b/static/style.css
@@ -356,3 +356,9 @@ form {
   background: #000;
   border: 2px solid #000;
 }
+.user-options .dropdown a i {
+  color: #2a2a2a;
+  font-size: 22px;
+  margin-right: 8px;
+  vertical-align: middle;
+}
