Update: Connected logout

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -19,7 +19,7 @@
         <div id="userDropdown" class="dropdown">
             <a href="#"><i class='bx bxs-palette'></i>Change Theme</a>
             <a href="#"><i class='bx bxs-cog'></i>Settings</a>
-            <a href="#"><i class='bx bxs-log-out'></i>Logout</a>
+            <a href="{% url 'users:logout_user'%}"><i class='bx bxs-log-out'></i>Logout</a>
         </div>
     </div>
 </div>
