--- a/static/style.css
+++ b/static/style.css
@@ -253,8 +253,8 @@ form {
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  width: 350px;
-  height: 500px;
+  width: 450px;
+  height: 675px;
   text-align: center;
 }
 .body-index h1 {
@@ -308,7 +308,7 @@ form {
   color: #333;
   width: 600px;
   max-width: 600px;
-  height: 500px;
+  height: 675px;
   text-align: left;
   overflow-y: auto;
 }
@@ -361,4 +361,62 @@ form {
   font-size: 22px;
   margin-right: 8px;
   vertical-align: middle;
+}
+@media screen and (max-width: 650px) {
+  .body-index {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .body-index form {
+    width: 90%;
+    margin-bottom: 20px;
+    margin-top: 73px;
+  }
+  .body-index #chat_response {
+    width: 90%;
+    margin-bottom: 20px;
+  }
+  .body-index textarea {
+    width: 100%;
+    box-sizing: border-box;
+  }
+  .body-index .submit {
+    width: 100%;
+  }
+  .body-index .user-options {
+    position: absolute;
+    top: 0;
+    left: 85px;
+  }
+  .body-index .dropdown {
+    position: absolute;
+    bottom: 60px;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    display: none;
+  }
+  .body-index .dropdown a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .body-index .user-options button i {
+    padding: 0;
+  }
+  .body-index .dropdown a:hover {
+    background-color: #ddd;
+  }
+  .body-index .user-btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+  }
 }
