update: edited pricing and index

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -18,10 +18,14 @@
         </button>
         <div id="userDropdown" class="dropdown">
             <a href="#"><i class='bx bxs-palette'></i>Change Theme</a>
-            <a href="#"><i class='bx bxs-purchase-tag'></i>Pricing</a>
+            <a href="{% url 'pricings:pricing_list'%}"><i class='bx bxs-purchase-tag'></i>Pricing</a>
             <a href="#"><i class='bx bxs-cog'></i>Settings</a>
             <a href="{% url 'users:logout_user'%}"><i class='bx bxs-log-out'></i>Logout</a>
         </div>
+    </div>
+
+    <div class="logo">
+        <a href="{% url 'kunwariwebpage:index'%}"><button class="btn btn-logo">Logo</button></a>
     </div>
 </div>
 
