--- a/pricings/templates/pricings/pricing.html
+++ b/pricings/templates/pricings/pricing.html
@@ -1,4 +1,54 @@
 {% extends 'base.html'%}
 {% block maincontent %}
-<div>This is the payment page</div>
+
+<div class="body-pricing">
+  <div class="pricing-container">
+    <div class="price">$100<span style="font-size:16px; color:#777;">/month</span></div>
+    <div class="plan-name">Premium Plan</div>
+    
+    <ul class="benefits">
+      <li>✅ Advanced AI</li>
+      <li>✅ Custom branding/logos</li>
+      <li>✅ Export options</li>
+      <li>✅ Faster processing</li>
+      <li>✅ Premium templates</li>
+      <li>✅ Team collaboration</li>
+      <li>✅ Unlimited slide generation</li>
+    </ul>
+  
+    <button class="choose-button">Choose Plan</button>
+  </div>
+
+  <div class="user-options">
+    <button class="btn user-btn" onclick="toggleDropdown()">
+        <i class='bx bxs-user'></i>
+    </button>
+    <div id="userDropdown" class="dropdown">
+        <a href="#"><i class='bx bxs-palette'></i>Change Theme</a>
+        <a href="#"><i class='bx bxs-purchase-tag'></i>Pricing</a>
+        <a href="#"><i class='bx bxs-cog'></i>Settings</a>
+        <a href="{% url 'users:logout_user'%}"><i class='bx bxs-log-out'></i>Logout</a>
+    </div>
+  </div>
+
+  <div class="logo">
+    <a href="{% url 'kunwariwebpage:index'%}"><button class="btn btn-logo">Logo</button></a>
+  </div>
+</div>
+
+<script> // USER DROPDOWN
+  function toggleDropdown() {
+      document.getElementById("userDropdown").classList.toggle("show");
+    }
+  
+    window.onclick = function(event) {
+      if (!event.target.matches('.user-btn') && !event.target.closest('.user-options')) {
+        var dropdown = document.getElementById("userDropdown");
+        if (dropdown.classList.contains('show')) {
+          dropdown.classList.remove('show');
+        }
+      }
+    }
+</script>
+
 {% endblock%}
