Update: Added nested prompts

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -9,7 +9,7 @@
     </form>
 
     <div id="chat_response">
-        {{response}}{% lorem 1 b random %}
+        {{response | safe}}
     </div>
 
     <div class="user-options">
