--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -27,6 +27,9 @@
             </div>
             <a href="{% url 'pricings:pricing_list'%}"><i class='bx bxs-purchase-tag'></i>Pricing</a>
             <a href="#"><i class='bx bxs-cog'></i>Settings</a>
+            {% if params.isAdmin %}
+            <a href="{% url 'users:accounts'%}"><i class='bx bxs-cog'></i>Accounts</a>
+            {% endif %}
             <a href="{% url 'users:logout_user'%}"><i class='bx bxs-log-out'></i>Logout</a>
         </div>
     </div>
