--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     {% block maincontent%}
     {% endblock %}
     <script src="{% static 'index.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel = "stylesheet" href = "{% static 'style.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </body>
