Update: Fixed display of response

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -9,8 +9,8 @@
         <button class="submit" type="submit" id="submit-to-chatgpt">Send</button>
     </form>
 
-    <pre id="chat_response">
-    </pre>
+    <div id="chat_response">
+    </div>
 
     <div class="user-options">
         <button class="btn user-btn" onclick="toggleDropdown()">
