Update: Added episode, content, and facilitator functionalities

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -8,6 +8,9 @@
         <h1>Kunwari Activator</h1>
         <textarea id="prompt" placeholder="eg. mathematics, 60 minutes, learning objectives" name="prompt"></textarea>
         <button class="submit" type="submit" id="submit-to-chatgpt">Send</button>
+        <button class="submit" type="submit" id="generate-episodes" hidden>Generate Episodes</button>
+        <button class="submit" type="submit" id="generate-content" hidden>Generate Content</button>
+        <button class="submit" type="submit" id="generate-facilitator-script" hidden>Generate Facilitator Script</button>
         <button class="submit" type="submit" id="generate-pptx" hidden>Generate Powerpoint</button>
     </form>
     
