Update: Initial setup of pptx format

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -11,6 +11,7 @@
         <button class="submit" type="submit" id="generate-episodes" hidden>Generate Episodes</button>
         <button class="submit" type="submit" id="generate-content" hidden>Generate Content</button>
         <button class="submit" type="submit" id="generate-facilitator-script" hidden>Generate Facilitator Script</button>
+        <!-- Open a new tab when click to download the pptx -->
         <button class="submit" type="submit" id="generate-pptx" hidden>Generate Powerpoint</button>
     </form>
     
