--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -12,13 +12,13 @@
         <button class="submit" type="submit" id="generate-content" hidden>Generate Content</button>
         <button class="submit" type="submit" id="generate-facilitator-script" hidden>Generate Facilitator Script</button>
         <!-- Open a new tab when click to download the pptx -->
-        <button class="submit" type="submit" id="generate-pptx">Generate Powerpoint</button>
+        <button class="submit" type="submit" id="generate-pptx" hidden>Generate Powerpoint</button>
     </form>
     
     <div id="chat_response">
-       asd123
+    
     </div>
-    <button class="submit" id="download-pptx">Download</button>
+    <button class="submit" id="download-pptx" hidden>Download</button>
     <div class="user-options">
         <button class="btn user-btn" onclick="toggleDropdown()">
             <i class='bx bxs-user'></i>
