Update: Add a notification for file generated, and a button for download

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -11,14 +11,16 @@
         <button class="submit" type="submit" id="generate-episodes" hidden>Generate Episodes</button>
         <button class="submit" type="submit" id="generate-content" hidden>Generate Content</button>
         <button class="submit" type="submit" id="generate-facilitator-script" hidden>Generate Facilitator Script</button>
-        <!-- Open a new tab when click to download the pptx -->
         <button class="submit" type="submit" id="generate-pptx" hidden>Generate Powerpoint</button>
     </form>
     
-    <div id="chat_response">
-    
+    <div>
+        <div id="chat_response">
+        </div>
+        <p id="message" hidden></p>
+        <button class="submit" id="download-pptx" hidden>Download</button>
     </div>
-    <button class="submit" id="download-pptx" hidden>Download</button>
+    
     <div class="user-options">
         <button class="btn user-btn" onclick="toggleDropdown()">
             <i class='bx bxs-user'></i>
