update: ccs update, button issue

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -14,11 +14,12 @@
         <button class="submit" type="submit" id="generate-pptx" hidden>Generate Powerpoint</button>
     </form>
     
-    <div>
-        <div id="chat_response">
+    <div class="chat-container">
+        <div id="chat_response"></div>
+        <div class="message-download">
+            <button class="submit" id="download-pptx">Download</button>
+            <p id="message" hidden></p>
         </div>
-        <p id="message" hidden></p>
-        <button class="submit" id="download-pptx" hidden>Download</button>
     </div>
     
     <div class="user-options">
