Update: Fixed logo appearance

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -45,7 +45,11 @@
     </div>
 
     <div class="logo">
-        <a href="{% url 'kunwariwebpage:index'%}"><button class="btn btn-logo">Logo</button></a>
+        <a href="{% url 'kunwariwebpage:index'%}">
+            <button class="btn btn-logo">
+                <img src="/static/BINGExp.jpg" style="width:100px; height:100px;">
+            </button>
+        </a>
     </div>
 </div>
 
