Update: Logo CSS and Download button

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -17,8 +17,8 @@
     <div class="chat-container">
         <div id="chat_response"></div>
         <div class="message-download">
-            <button class="submit" id="download-pptx">Download</button>
-            <p id="message" hidden></p>
+            <button class="submit" id="download-pptx" disabled>Download</button>
+            <p id="message">sample message</p>
         </div>
     </div>
     
@@ -47,7 +47,7 @@
     <div class="logo">
         <a href="{% url 'kunwariwebpage:index'%}">
             <button class="btn btn-logo">
-                <img src="/static/BINGExp.jpg" style="width:100px; height:100px;">
+                <img src="/static/BINGExp.png">
             </button>
         </a>
     </div>
