Update: Venv created, Fixed download button

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -18,7 +18,7 @@
         <div id="chat_response"></div>
         <div class="message-download">
             <button class="submit" id="download-pptx" disabled>Download</button>
-            <p id="message">sample message</p>
+            <p id="message"></p>
         </div>
     </div>
     
