Update: Added a reset button

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -20,6 +20,7 @@
             <button class="submit" id="download-pptx" disabled>Download</button>
             <p id="message"></p>
         </div>
+        <button onClick="window.location.href=window.location.href">Reset</button>
     </div>
     
     
@@ -69,7 +70,7 @@
             <strong>I. Generate a Lesson Plan</strong>
             <ul>
                 <li>1. Type a topic into the input field.</li>
-                <li>2. Click the <strong>Send</strong> button.</li>
+                <li>2. Click the <strong>Send(click again to regenerate)</strong> button.</li>
                 <li>3. A lesson plan will appear in the right-side container, where you can freely edit the text to your liking.</li>
             </ul>
         </li>
@@ -91,12 +92,12 @@
                     2. <em>To save, click <strong>Generate PowerPoint</strong> and then <strong>Download</strong>.</em>
                 </li>
                 <li>
-                    <strong>- Generate Content:</strong><br>
+                    <strong>- Generate Content(click again to regenerate):</strong><br>
                     1. Add detailed content to each slide generated in the Episodes phase.<br>
                     2. <em>To save, click <strong>Generate PowerPoint</strong> and then <strong>Download</strong>.</em>
                 </li>
                 <li>
-                    <strong>- Generate Facilitator Script:</strong><br> 
+                    <strong>- Generate Facilitator Script:(click again to regenerate)</strong><br> 
                     1. Create a detailed script for the slides generated in the Content phase.<br>
                     2. <em>To save, click <strong>Generate PowerPoint</strong> and then <strong>Download</strong>.</em>
                 </li>
