Update: Fix reset button and pop-up when gpt is generating a response

--- a/kunwariwebpage/templates/kunwariwebpage/index.html
+++ b/kunwariwebpage/templates/kunwariwebpage/index.html
@@ -17,10 +17,10 @@
     <div class="chat-container">
         <div id="chat_response" contenteditable></div>
         <div class="message-download">
-            <button class="submit" id="download-pptx" disabled>Download</button>
+            <button class="submit btn-under-gptresponse" id="download-pptx" disabled>Download</button>
+            <button class="submit btn-under-gptresponse" onClick="window.location.href=window.location.href" >Reset</button>
             <p id="message"></p>
         </div>
-        <button onClick="window.location.href=window.location.href">Reset</button>
     </div>
     
     
